--- a/app/src/main/res/layout/activity_gojek.xml
+++ b/app/src/main/res/layout/activity_gojek.xml
@@ -5,53 +5,54 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".GojekActivity">
+
+    <LinearLayout
+        android:id="@+id/search_profile"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:background="@color/green_gojek"
+        android:weightSum="100">
+        <EditText
+            android:layout_weight="100"
+            android:layout_width="0dp"
+            android:layout_height="48dp"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="16dp"
+            android:layout_marginBottom="16dp"
+            android:background="@drawable/rounded_edit_text"
+            android:drawableStart="@drawable/ic_baseline_search_24"
+            android:drawablePadding="10dp"
+            android:paddingStart="10dp"
+            android:hint="@string/cari_layanan_makanan_tujuan"
+            android:textSize="16sp"
+            android:textColor="@color/grey2"
+            />
+
+        <ImageButton
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="16dp"
+            android:src="@drawable/ic_baseline_account_circle_24"
+            android:background="@color/green_gojek" />
+
+    </LinearLayout>
+
     <ScrollView
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/search_profile"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
-            <LinearLayout
-                android:id="@+id/search_profile"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                android:background="@color/green_gojek"
-                android:weightSum="100">
-                <EditText
-                    android:layout_weight="100"
-                    android:layout_width="0dp"
-                    android:layout_height="48dp"
-                    android:layout_marginStart="16dp"
-                    android:layout_marginTop="16dp"
-                    android:layout_marginBottom="16dp"
-                    android:background="@drawable/rounded_edit_text"
-                    android:drawableStart="@drawable/ic_baseline_search_24"
-                    android:drawablePadding="10dp"
-                    android:paddingStart="10dp"
-                    android:hint="@string/cari_layanan_makanan_tujuan"
-                    android:textSize="16sp"
-                    android:textColor="@color/grey2"
-                    />
-
-                <ImageButton
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_margin="16dp"
-                    android:src="@drawable/ic_baseline_account_circle_24"
-                    android:background="@color/green_gojek" />
-
-
-            </LinearLayout>
 
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:id="@+id/constraint_blue"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/search_profile"
+                app:layout_constraintTop_toTopOf="parent"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_margin="16dp"
@@ -221,7 +222,7 @@
                 android:layout_width="64dp"
                 android:layout_height="64dp"
                 android:background="@drawable/rounded_image_button_red"
-                android:src="@drawable/ic_baseline_shopping_basket_36"/>
+                android:src="@drawable/ic_baseline_shopping_basket_36_white"/>
 
             <ImageButton
                 android:id="@+id/gopulsa_button"
@@ -232,7 +233,7 @@
                 android:layout_width="64dp"
                 android:layout_height="64dp"
                 android:background="@drawable/rounded_image_button_blue"
-                android:src="@drawable/ic_baseline_smartphone_36"/>
+                android:src="@drawable/ic_baseline_smartphone_36_white"/>
 
             <ImageButton
                 android:id="@+id/other_button"
@@ -510,7 +511,10 @@
                 android:id="@+id/imageView"
                 android:layout_width="match_parent"
                 android:layout_height="128dp"
-                android:layout_margin="16dp"
+                android:layout_marginTop="16dp"
+                android:layout_marginStart="16dp"
+                android:layout_marginEnd="16dp"
+                android:layout_marginBottom="128dp"
                 android:scaleType="centerCrop"
                 android:src="@drawable/banner_gopay_jago_jurus_id"
                 app:layout_constraintStart_toStartOf="parent"
