--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -13,4 +13,5 @@
     <color name="grey2">#5A5A5A</color>
     <color name="gopay">#0081A0</color>
     <color name="green_to_white">#CDE1CD</color>
+    <color name="red">#F44336</color>
 </resources>
