--- a/app/src/main/res/layout/activity_tokopedia.xml
+++ b/app/src/main/res/layout/activity_tokopedia.xml
@@ -676,6 +676,7 @@
                 app:layout_constraintTop_toBottomOf="@+id/kejar_diskon_text"
                 app:layout_constraintStart_toStartOf="parent"
                 android:layout_margin="16dp"
+                android:paddingBottom="192dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content">
 
